@@ -4,6 +4,7 @@ import java.util.List;
 import java.util.concurrent.CopyOnWriteArrayList;
 
 import org.restlet.Application;
+import org.restlet.Component;
 import org.restlet.Restlet;
 import org.restlet.routing.Router;
 
@@ -13,8 +14,7 @@ import org.restlet.routing.Router;
 public class MailServerApplication extends Application {
 
     /** Static list of accounts stored in memory. */
-    private static final List<String> accounts = 
-        new CopyOnWriteArrayList<String>();
+    private static final List<String> accounts = new CopyOnWriteArrayList<String>();
 
     /**
      * Returns the static list of accounts stored in memory.
@@ -23,6 +23,20 @@ public class MailServerApplication extends Application {
      */
     public static List<String> getAccounts() {
         return accounts;
+    }
+
+    /**
+     * Launch the mail server application using a component configured by an XML
+     * file store in the classpath.
+     * 
+     * @param args
+     *            The arguments.
+     * @throws Exception
+     */
+    public static void main(String[] args) throws Exception {
+        Component component = new Component(
+                "clap://system/org/restlet/example/book/restlet/ch04/sec3/server/component.xml");
+        component.start();
     }
 
     /**
@@ -46,4 +60,5 @@ public class MailServerApplication extends Application {
         router.attach("/accounts/{accountId}", AccountServerResource.class);
         return router;
     }
+
 }
