@@ -1,11 +1,8 @@
 package org.restlet.example.book.restlet.ch04.sec3.server;
 
-import java.util.logging.LogManager;
-
 import org.restlet.Component;
 import org.restlet.Server;
 import org.restlet.data.Protocol;
-import org.restlet.resource.ClientResource;
 
 /**
  * RESTful component containing the mail server application.
@@ -47,11 +44,8 @@ public class MailServerComponent extends Component {
         getDefaultHost().attachDefault(new MailServerApplication());
 
         // Configure the log service
-        ClientResource logProperties = new ClientResource(
-                "clap://system/org/restlet/example/book/restlet/ch04/sec3/server/log.properties");
-        LogManager.getLogManager().readConfiguration(
-                logProperties.get().getStream());
         getLogService().setLoggerName("MailServer.AccessLog");
-
+        getLogService().setLogPropertiesRef(
+            "clap://system/org/restlet/example/book/restlet/ch04/sec3/server/log.properties");
     }
 }
