@@ -1,0 +1,16 @@
+<?xml version="1.0"?>
+<component xmlns="http://www.restlet.org/schemas/2.0/Component"
+	name="RESTful Mail Server component" description="Example for 'Restlet in Action' book"
+	owner="Noelios Technologies" author="The Restlet Team">
+
+	<server protocol="HTTP">
+		<parameter name="tracing" value="true" />
+	</server>
+
+	<defaultHost hostDomain="www.rmep.com|www.rmep.net|www.rmep.org"
+		serverAddress="1.2.3.10|1.2.3.20" serverPort="80">
+		<attach uriPattern=""
+			targetClass="org.restlet.example.book.restlet.ch04.sec3.server.MailServerApplication" />
+	</defaultHost>
+
+</component>
