@@ -50,12 +50,8 @@
 		<attribute name="targetClass" type="string" use="optional" />
 		<attribute name="targetDescriptor" type="string" use="optional" />
 		<attribute name="default" type="boolean" use="optional" />
-		<attribute name="matchingMode" type="int" use="optional"
-			default="1" />
+		<attribute name="matchingMode" type="int" use="optional" default="1" />
 		<attribute name="defaultVariableType" type="int" use="optional" />
-		<!--
-			???
-		-->
 	</complexType>
 
 	<complexType name="ClientType">
@@ -65,34 +61,42 @@
 	</complexType>
 
 	<complexType name="ComponentType">
-		<sequence>
-			<element name="client" type="tns:ClientType" minOccurs="0"
-				maxOccurs="unbounded" />
-			<element name="server" type="tns:ServerType" minOccurs="0"
-				maxOccurs="unbounded" />
-			<element name="parameter" type="tns:ParameterType" minOccurs="0"
-				maxOccurs="unbounded" />
-			<element name="defaultHost" type="tns:VirtualHostType"
-				minOccurs="0" maxOccurs="1" />
-			<element name="host" type="tns:VirtualHostType" minOccurs="0"
-				maxOccurs="unbounded" />
-			<element name="internalRouter" type="tns:RouterType"
-				minOccurs="0" maxOccurs="1" />
-			<element name="logService" type="tns:LogServiceType"
-				minOccurs="0" maxOccurs="1" />
-			<element name="statusService" type="tns:StatusServiceType"
-				minOccurs="0" maxOccurs="1" />
-		</sequence>
+		<complexContent>
+			<extension base="tns:RestletType">
+				<sequence>
+					<element name="client" type="tns:ClientType" minOccurs="0"
+						maxOccurs="unbounded" />
+					<element name="server" type="tns:ServerType" minOccurs="0"
+						maxOccurs="unbounded" />
+					<element name="parameter" type="tns:ParameterType"
+						minOccurs="0" maxOccurs="unbounded" />
+					<element name="defaultHost" type="tns:VirtualHostType"
+						minOccurs="0" maxOccurs="1" />
+					<element name="host" type="tns:VirtualHostType" minOccurs="0"
+						maxOccurs="unbounded" />
+					<element name="internalRouter" type="tns:RouterType"
+						minOccurs="0" maxOccurs="1" />
+					<element name="logService" type="tns:LogServiceType"
+						minOccurs="0" maxOccurs="1" />
+					<element name="statusService" type="tns:StatusServiceType"
+						minOccurs="0" maxOccurs="1" />
+				</sequence>
+			</extension>
+		</complexContent>
 	</complexType>
 
 	<complexType name="ConnectorType" abstract="true">
-		<sequence>
-			<element name="parameter" type="tns:ParameterType" minOccurs="0"
-				maxOccurs="unbounded" />
-		</sequence>
-		<attribute name="protocol" type="string" use="optional" />
-		<attribute name="protocols" type="tns:ProtocolListType" use="optional">
-		</attribute>
+		<complexContent>
+			<extension base="tns:RestletType">
+				<sequence>
+					<element name="parameter" type="tns:ParameterType"
+						minOccurs="0" maxOccurs="unbounded" />
+				</sequence>
+				<attribute name="protocol" type="string" use="optional" />
+				<attribute name="protocols" type="tns:ProtocolListType"
+					use="optional" />
+			</extension>
+		</complexContent>
 	</complexType>
 
 	<complexType name="LogServiceType">
@@ -107,20 +111,31 @@
 		<attribute name="value" type="string" />
 	</complexType>
 
+	<complexType name="RestletType">
+		<attribute name="name" type="string" use="optional" />
+		<attribute name="description" type="string" use="optional" />
+		<attribute name="owner" type="string" use="optional" />
+		<attribute name="author" type="string" use="optional" />
+	</complexType>
+
 	<complexType name="RouterType">
-		<sequence>
-			<element name="parameter" type="tns:ParameterType" minOccurs="0"
-				maxOccurs="unbounded" />
-			<element name="attach" type="tns:AttachType" minOccurs="1"
-				maxOccurs="unbounded" />
-		</sequence>
-		<attribute name="defaultMatchingMode" type="int" use="optional"
-			default="1" />
-		<attribute name="defaultMatchQuery" type="boolean" use="optional" />
-		<attribute name="maxAttempts" type="int" use="optional" />
-		<attribute name="requiredScore" type="float" use="optional" />
-		<attribute name="retryDelay" type="long" use="optional" />
-		<attribute name="routingMode" type="int" use="optional" />
+		<complexContent>
+			<extension base="tns:ConnectorType">
+				<sequence>
+					<element name="parameter" type="tns:ParameterType"
+						minOccurs="0" maxOccurs="unbounded" />
+					<element name="attach" type="tns:AttachType" minOccurs="1"
+						maxOccurs="unbounded" />
+				</sequence>
+				<attribute name="defaultMatchingMode" type="int" use="optional"
+					default="1" />
+				<attribute name="defaultMatchQuery" type="boolean" use="optional" />
+				<attribute name="maxAttempts" type="int" use="optional" />
+				<attribute name="requiredScore" type="float" use="optional" />
+				<attribute name="retryDelay" type="long" use="optional" />
+				<attribute name="routingMode" type="int" use="optional" />
+			</extension>
+		</complexContent>
 	</complexType>
 
 	<complexType name="ServerType">
