@@ -73,8 +73,8 @@ public final class ServerList extends WrapperList<Server> {
      * @return The added server.
      */
     public Server add(Protocol protocol) {
-        final Server result = new Server(protocol, null, protocol
-                .getDefaultPort(), getTarget());
+        Server result = new Server(protocol, null, protocol.getDefaultPort(),
+                getTarget());
         add(result);
         return result;
     }
@@ -90,7 +90,7 @@ public final class ServerList extends WrapperList<Server> {
      * @return The added server.
      */
     public Server add(Protocol protocol, int port) {
-        final Server result = new Server(protocol, null, port, getTarget());
+        Server result = new Server(protocol, null, port, getTarget());
         add(result);
         return result;
     }
@@ -109,7 +109,7 @@ public final class ServerList extends WrapperList<Server> {
      * @return The added server.
      */
     public Server add(Protocol protocol, String address, int port) {
-        final Server result = new Server(protocol, address, port, getTarget());
+        Server result = new Server(protocol, address, port, getTarget());
         add(result);
         return result;
     }
